---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 18/1/26
  Major Features:
    - Added tough strongboxes in random hexes on all planets, giving loot on each successful breaking.
  Features:
    - Added item buffs: all vanilla chest types (8 new buffs).
  Changes:
    - Modified mod description to list strongboxes as a notable, interesting feature: "scaling DPS boss fights".
  Bugfixes:
    - Fixed train trading crashes when coins are involved.
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 17/1/26
  Bugfixes:
    - Fixed migrations from saves all the way back from 0.4.2 to 1.5.x.
    - Removed the text with missing localization in the item buffs GUI.
    - Fixed that repeatedly toggling "All Buffs Level" item buffs was repeatedly adding all other effects instead of adding and removing them.
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 17/1/26
  Major Features:
    - Added mod setting for controlling the efficiency of trades (which is the average ratio of the trade's total output-to-input value).
  Features:
    - Added mod setting for controlling the hex claim costs, intended to be lowered when lowering the trade efficiency setting to the point where infinite loops are impossible.
    - Added a fifth coin tier, black hole coins.
    - Added a GUI for viewing and managing the total array of item buffs you have unlocked.
  Minor Features:
    - Added more item buffs: rocket turret, rocket launcher, raw fish.
  Changes:
    - Item counts in trades no longer exceed 100 or five total stacks (whichever is smaller).
    - Item counts in trades are now more varied, where lower-valued items are generally in higher quantities than the higher-valued items on the same side of the trade.